[[bin]]
name = "alm"
path = "src/main.rs"

[lib]
name = "alm"
path = "src/lib.rs"

[package]
name = "alm"
version = "0.3.0"
edition = "2024"
description = "Amy's Lightweight Markup language"
license = "MIT OR Apache-2.0"
authors = ["Amy Gilhespy <amyogilhespy@gmail.com>"]
categories = [
    "parser-implementations",
    "parsing",
    "text-processing",
    "compilers",
]
repository = "https://github.com/AmyGilhespy/alm"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
pest = "2.8.6"
pest_derive = { version = "2.8.6", features = ["grammar-extras"] }
thiserror = "2.0.18"
